syntax = "proto3";
import "graph.proto";

package TCProto;

message RoutingSettings {
    int32 bus_wait_time = 1;
    double bus_velocity = 2;
}

message StopVertexIds {
    string name = 1;
    uint32 in = 2;
    uint32 out = 3;
}

message VertexInfo {
    string stop_name = 1;
}

message BusEdgeInfo {
    string bus_name = 1;
    uint32 start_stop_idx = 2;
    uint32 finish_stop_idx = 3;
}

message WaitEdgeInfo {
}

message EdgeInfo {
    oneof data {
        BusEdgeInfo bus_data = 1;
        WaitEdgeInfo wait_data = 2;
    }
}

message TransportRouter {
    RoutingSettings routing_settings = 1;
    GraphProto.DirectedWeightedGraph graph = 2;
    GraphProto.Router router = 3;
    repeated StopVertexIds stops_vertex_ids = 4;
    repeated VertexInfo vertices_info = 5;
    repeated EdgeInfo edges_info = 6;
}

